--- a/main.html
+++ b/main.html
@@ -6,9 +6,10 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-	<img src="https://media.istockphoto.com/id/523761634/photo/cute-panda-bear-climbing-in-tree.jpg?s=612x612&w=0&k=20&c=TxsmORsbuY1LpxQsc6T8fpWJo7lBwncciYhroAr8rXI=" width="200" height="200">
+<body><div>
+	<img src="https://media.istockphoto.com/id/523761634/photo/cute-panda-bear-climbing-in-tree.jpg?s=612x612&w=0&k=20&c=TxsmORsbuY1LpxQsc6T8fpWJo7lBwncciYhroAr8rXI=" width="200" height="200" alt="Panda">
 	<!-- the entire body must be written by student -->
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
